<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="10dp"
    android:background="@drawable/popupbackground">

        <TextView
            android:id="@+id/txt_rateustounlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/rate_icon_text_popup"
            android:textColor="@color/text3"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textIsSelectable="false"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout"
        android:layout_below="@+id/txt_rateustounlock">

        <Button
            android:id="@+id/txtNotNow"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/buttonred"
            android:textColor="@color/textRed"
            android:textSize="15dp"
            android:gravity="center"
            android:text="@string/rate_us_no"
            android:layout_marginRight="10dp"/>


        <Button
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:id="@+id/img_rateus"
            android:background="@drawable/buttongreen"
            android:text="@string/rate_us_yes"
            android:textSize="17dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
</RelativeLayout>
